--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,12 @@
         </label>
         <button type="submit">Search</button>
       </form>
-      <span class="loader"></span>
 
       <ul class="gallery"></ul>
 
-      <button class="addMore" type="submit">Load more</button>
+      <button class="addMore" type="button">Load more</button>
+
+      <span class="loader"></span>
 
       <script type="module" src="./main.js"></script>
     </div>
